k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gdgaic
  labels:
    name: gdgaic
