k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model-api
  namespace: gdgaic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: model-api
  template:
    metadata:
      labels:
        app: model-api
    spec:
      containers:
      - name: model-api
        image: sotsuba/lossteach-gdgaic-model-api:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: 1Gi
            cpu: 3000m
          limits:
            memory: 2Gi
            cpu: 5000m

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
  namespace: gdgaic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      containers:
      - name: dashboard
        image: sotsuba/lossteach-gdgaic-dashboard:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8501
---
apiVersion: v1
kind: Service
metadata:
  name: model-api
  namespace: gdgaic
spec:
  selector:
    app: model-api
  ports:
  - port: 8000
    targetPort: 8000
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: model-api-external
  namespace: gdgaic
  annotations:
    cloud.google.com/neg: '{"ingress": true}'  # Enable NEG for better load balancing
    cloud.google.com/load-balancer-type: "Internal"  # Optional: Use internal load balancer if needed
spec:
  selector:
    app: model-api
  ports:
  - port: 80
    targetPort: 8000
  type: LoadBalancer

---
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: gdgaic
spec:
  selector:
    app: dashboard
  ports:
  - port: 80
    targetPort: 8501
  type: LoadBalancer
